2022-01-31 (2.14.1 & 2.14.2)

- Fixed very old bug thanks to m-a ! 
  - The zip files generated have the same checksum when nothing has changed
- Improved messages
- Added new arguments to override the zip filename
  - `--zip-filename-from-parent`
  - `--zip-filename="whatever.zip"`
  - Default: 'index.zip'

2022-01-27 (2.14.0)

- Added new command to initialize database with a user within an existing instance

2021-10-28 (PRELIM 2.13.x)

- Added new command --test-db-connection it tests the mysql connection for the primary and reference DB.

2021-10-27 (PRELIM 2.12.x)

- Added codepipeline actions, we are using cloudformation stacks to deploy our pipelines, we were looking for a quick way to let the developers update the branch deployed using those codepipeline. I've added 2 commands, --get-current-parameters and --update-branch-name.
- Restructure files and directories


2021-09-22

- Fixed Lambda errors yadu < 2.10.0
- Fixed bug when using regex and loading templates
- Added/Reviewed messages print on screen


2021-09-21

- Added loadConfig to allow custom nodeJS script to load environment variables from the secrets manager easily
- Fixes and console.log improvements
- Worked on the --create for the lambdas (not properly tested though)
- Tried to replicate the issue with the template.yml files, not able to replicate, added console.log to mention that issues can occur
- Added Dockerfile to use YaDU and other tools
- Added POC to test the config package
- Updated documentation
- Enabled Jest coverage option
- added new patterns in the ignore list for the configuration parser


2021-08-30

- Added --zip-args to use --package-only without specifying the --use-yaml --env parameters. But you will need to pass the files to zip manually.
- Added default zip function to use the .npmignore to determine which files and directories to archive

2021-08-19

- Added Telemetry with configurable rest api endpoint
- Fixed npm install to work with npm v7