@@ -1,3 +1,8 @@
+2022-02-10 (2.14.3)
+
+- Added support to skip the AWS_PROFILE and use the local exported environment variables (mostly required when using MFA login)
+- removed unnecessary console.log that pollute the screen...
+
 2022-01-31 (2.14.1 & 2.14.2)
 
 - Fixed very old bug thanks to m-a ! 
